--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,19 @@
 {
     "name": "lennon/iqiyi-wenxue",
     "description": "this is test",
-    "type": "yii2-extension",
-    "keywords": ["yii2","extension","ajax","crud","gii","template","database"],
-    "license": "Apache-2.0",
+    "type": "library",
+    "require": {
+        "php": ">=5.4"
+    },
+    "require-dev": {
+        "php": ">=5.4"
+    },
+    "license": "MIT",
     "authors": [
         {
             "name": "iqiyiwenxue",
             "email": "lennonandjune@gmail.com",
-            "homepage": "https://github.com/shmilyzxt?tab=repositories"
-        }
+     }
     ],
-    "require": {
-        "yiisoft/yii2": "*",
-        "yiisoft/yii2-gii": "*",
-        "yiisoft/yii2-bootstrap": "*",
-        "kartik-v/yii2-grid": "^3.0.4",
-        "kartik-v/yii2-detail-view": "^1.7.3",
-        "kartik-v/yii2-mpdf": "^1.0.0",
-        "kartik-v/yii2-editable": "^1.7.3",
-        "kartik-v/yii2-dialog": "^1.0.0",
-        "kartik-v/yii2-widgets": "*"
-    }
+    "minimum-stability": "dev"
 }
