--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,19 @@
 {
-    "name": "lennon/iqiyi-wenxue",
-    "description": "this is test",
-    "type": "library",
-    "require": {
-        "php": ">=5.4"
-    },
-    "require-dev": {
-        "php": ">=5.4"
-    },
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "iqiyiwenxue",
-            "email": "lennonandjune@gmail.com",
-     }
-    ],
-    "minimum-stability": "dev"
+  "name": "lennon/iqiyi-wenxue",
+  "description": "this is test",
+  "type": "library",
+  "require": {
+    "php": ">=5.4"
+  },
+  "require-dev": {
+    "php": ">=5.4"
+  },
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "iqiyiwenxue",
+      "email": "lennonandjune@gmail.com"
+    }
+  ],
+  "minimum-stability": "dev"
 }
